force-app/main/default/objects/breadwinner_qbo__Line_Item__c/breadwinner_qbo__Line_Item__c.object-meta.xml
<CustomObject>
    <description>Invoice Line Items</description>
    <label>Line Item</label>
    <nameField>
        <label>Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>