force-app/main/default/objects/breadwinner_qbo__Line_Item__c/fields/breadwinner_qbo__Description__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Description__c</fullName>
    <label>Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>