force-app/main/default/objects/breadwinner_qbo__Line_Item__c/fields/breadwinner_qbo__Inventory_Site__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Inventory_Site__c</fullName>
    <label>Inventory Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>