force-app/main/default/objects/breadwinner_qbo__Line_Item__c/fields/breadwinner_qbo__Invoice__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Invoice__c</fullName>
    <description>Master of the line item</description>
    <label>Invoice</label>
    <referenceTo>breadwinner_qbo__Invoice__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>