force-app/main/default/objects/breadwinner_qbo__Line_Item__c/fields/breadwinner_qbo__Item_Ref__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Item_Ref__c</fullName>
    <description>Product/Service reference Id</description>
    <label>Item Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>