force-app/main/default/objects/breadwinner_qbo__Line_Item__c/fields/breadwinner_qbo__Line_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Line_Item_Id__c</fullName>
    <description>Line Item reference Id</description>
    <label>Line Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>