force-app/main/default/objects/breadwinner_qbo__Line_Item__c/fields/breadwinner_qbo__Line_Number__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Line_Number__c</fullName>
    <description>Specifies the position of the line in the collection of transaction lines.</description>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>