force-app/main/default/objects/breadwinner_qbo__Line_Item__c/fields/breadwinner_qbo__QB_Item__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__QB_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuickBooks Item</label>
    <referenceTo>breadwinner_qbo__BW_QB_Item__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>