force-app/main/default/objects/breadwinner_qbo__Line_Item__c/fields/breadwinner_qbo__Rate_7_Decimals__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Rate_7_Decimals__c</fullName>
    <label>Rate (7 Decimals)</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>