force-app/main/default/objects/breadwinner_qbo__Line_Item__c/fields/breadwinner_qbo__Rate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Rate__c</fullName>
    <description>Price/ UnitPrice of the Product/Service</description>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>