force-app/main/default/objects/breadwinner_qbo__Line_Item__c/fields/breadwinner_qbo__Service_Date__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Service_Date__c</fullName>
    <label>Service Date</label>
    <type>Date</type>
</CustomField>