force-app/main/default/objects/breadwinner_qbo__Line_Item__c/listViews/breadwinner_qbo__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_qbo__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_qbo__Invoice__c</columns>
    <columns>breadwinner_qbo__Service_Date__c</columns>
    <columns>breadwinner_qbo__Product_Service__c</columns>
    <columns>breadwinner_qbo__Description__c</columns>
    <columns>breadwinner_qbo__Quantity__c</columns>
    <columns>breadwinner_qbo__Rate__c</columns>
    <columns>breadwinner_qbo__Amount__c</columns>
    <columns>breadwinner_qbo__Tax__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>